dynamically_typed_tests/invalid/variables/became_valid/basicTypeErr03.wacc
# type mismatch: int <- string

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  i = "foo"
end
